RESOLVED FIXED214789
[iOS] Crash under ValidationBubble::setAnchorRect when showing form validation UI in unparented view
https://bugs.webkit.org/show_bug.cgi?id=214789
Summary [iOS] Crash under ValidationBubble::setAnchorRect when showing form validatio...
Wenson Hsieh
Reported 2020-07-25 17:31:48 PDT
Attachments
For EWS (16.06 KB, patch)
2020-07-25 17:41 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-07-25 17:41:42 PDT
Wenson Hsieh
Comment 2 2020-07-25 20:47:21 PDT
Comment on attachment 405236 [details] For EWS Thanks for the review!
EWS
Comment 3 2020-07-25 21:00:05 PDT
Committed r264893: <https://trac.webkit.org/changeset/264893> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405236 [details].
Note You need to log in before you can comment on or make changes to this bug.